--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>3vand0ng.GitHub.io by 3vand0ng</title>
+    <title>GitHub Pages</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,11 +17,11 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>3vand0ng.GitHub.io</h1>
+        <h1>GitHub Pages</h1>
         <p></p>
-        <p class="view"><a href="https://github.com/3vand0ng">View the Project on GitHub <small>3vand0ng</small></a></p>
+        <p class="view"><a href="#">View the Project on GitHub Pages</a></p>
         <ul>
-          <li class="single"><a href="https://github.com/3vand0ng/3vand0ng.github.io">View On <strong>GitHub</strong></a></li>
+          <li class="single"><a href="https://github.com">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
