--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <header class="without-description">
         <h1>GitHub Pages</h1>
         <p></p>
-        <p class="view"><a href="#">View the Project on GitHub Pages</a></p>
+        <p class="view"><a href="https://github.com">View the Project on GitHub</a></p>
         <ul>
           <li class="single"><a href="https://github.com">View On <strong>GitHub</strong></a></li>
         </ul>
